--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,76 +2,32 @@ name: CI
 
 on:
   push:
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-
-    env:
-      # stabile & leise Umgebung für Torch/Transformers/Streamlit
-      STREAMLIT_SERVER_FILE_WATCHER_TYPE: "none"
-      STREAMLIT_SERVER_ENABLE_FILE_WATCHER: "false"
-      PYTORCH_JIT: "0"
-      TOKENIZERS_PARALLELISM: "false"
-      HF_HUB_DISABLE_TELEMETRY: "1"
-      TORCH_CPP_LOG_LEVEL: "ERROR"
-      TORCH_LOGS: ""   # MUSS leer sein – "error" ist ein ungültiger Wert
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Python einrichten
-        uses: actions/setup-python@v5
+      # Python 3.11 ist empfohlen (3.12 hat viele Kompatibilitätsprobleme mit ML-Libraries)
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.12"
+          python-version: '3.11'
 
-      - name: pip Cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Abhängigkeiten installieren
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          # spaCy DE Modell für rechte Panel-Spalte
-          python -m spacy download de_core_news_sm
+      # Optional: pip cache leeren
+      - name: Clear pip cache
+        run: pip cache purge
 
       - name: Install dependencies
         run: |
-          pip install torch==2.3.0  # oder die Version, die mit deinem Code funktioniert
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Syntax-Check (schnelles Lint)
-        run: |
-          python - <<'PY'
-          import sys, pathlib
-          for p in pathlib.Path(".").rglob("*.py"):
-              try:
-                  compile(p.read_text(encoding="utf-8"), str(p), "exec")
-              except Exception as e:
-                  print(f"Syntaxfehler in {p}:\n{e}")
-                  sys.exit(1)
-          print("Syntax OK")
-          PY
-
-      - name: Tests laufen lassen (freundlich, wenn keine da)
-        shell: bash
-        run: |
-          if [ -d tests ]; then
-            echo "Starte pytest..."
-            pytest -q || code=$?; \
-              if [ "${code:-0}" = "5" ]; then \
-                echo "pytest: keine Tests gefunden → gilt als Erfolg"; \
-                exit 0; \
-              else \
-                exit ${code:-0}; \
-              fi
-          else
-            echo "Kein tests/-Ordner → pytest wird übersprungen."
-          fi
+      # Deine weiteren Test- oder Build-Schritte...
+      - name: Run Streamlit app test
+        run: streamlit run app/app.py --server.headless true
