--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,73 +1,101 @@
-name: CI
+name: CI/CD Pipeline
 
 on:
   push:
+    branches: [ main, develop ]
   pull_request:
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-
-    env:
-      # stabile & leise Umgebung für Torch/Transformers/Streamlit
-      STREAMLIT_SERVER_FILE_WATCHER_TYPE: "none"
-      STREAMLIT_SERVER_ENABLE_FILE_WATCHER: "false"
-      PYTORCH_JIT: "0"
-      TOKENIZERS_PARALLELISM: "false"
-      HF_HUB_DISABLE_TELEMETRY: "1"
-      TORCH_CPP_LOG_LEVEL: "ERROR"
-      TORCH_LOGS: ""   # MUSS leer sein – "error" ist ein ungültiger Wert
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, "3.10", "3.11"]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Python einrichten
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
 
-      - name: pip Cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
 
-      - name: Abhängigkeiten installieren
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          # spaCy DE Modell für rechte Panel-Spalte
-          python -m spacy download de_core_news_sm
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pytest pytest-cov
+        python -m spacy download de_core_news_sm
 
-      - name: Syntax-Check (schnelles Lint)
-        run: |
-          python - <<'PY'
-          import sys, pathlib
-          for p in pathlib.Path(".").rglob("*.py"):
-              try:
-                  compile(p.read_text(encoding="utf-8"), str(p), "exec")
-              except Exception as e:
-                  print(f"Syntaxfehler in {p}:\n{e}")
-                  sys.exit(1)
-          print("Syntax OK")
-          PY
+    - name: Run smoke tests
+      run: |
+        pytest test_smoke_improved.py -v --tb=short
 
-      - name: Tests laufen lassen (freundlich, wenn keine da)
-        shell: bash
-        run: |
-          if [ -d tests ]; then
-            echo "Starte pytest..."
-            pytest -q || code=$?; \
-              if [ "${code:-0}" = "5" ]; then \
-                echo "pytest: keine Tests gefunden → gilt als Erfolg"; \
-                exit 0; \
-              else \
-                exit ${code:-0}; \
-              fi
-          else
-            echo "Kein tests/-Ordner → pytest wird übersprungen."
-          fi
+    - name: Run full test suite (if exists)
+      run: |
+        if [ -d "tests" ]; then
+          pytest tests/ -v --cov=. --cov-report=xml
+        else
+          echo "No tests/ directory found, skipping full test suite"
+        fi
+
+    - name: Upload coverage reports
+      if: matrix.python-version == '3.9'
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    - name: Install linting tools
+      run: |
+        python -m pip install --upgrade pip
+        pip install black isort flake8
+
+    - name: Check code formatting with Black
+      run: black --check --diff .
+      continue-on-error: true
+
+    - name: Check import sorting with isort
+      run: isort --check-only --diff .
+      continue-on-error: true
+
+    - name: Lint with flake8
+      run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+      continue-on-error: true
+
+  security:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Run security scan with Bandit
+      run: |
+        pip install bandit
+        bandit -r . -f json -o bandit-report.json
+      continue-on-error: true
+
+    - name: Upload security report
+      uses: actions/upload-artifact@v3
+      with:
+        name: security-report
+        path: bandit-report.json
