--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ streamlit==1.38.0
 sentence-transformers==3.0.1    # Semantic search with SBERT
 torch==2.2.2                    # Deep learning backend (CPU/CUDA)
 spacy==3.7.5                    # NLP processing for German texts
+rapidfuzz==3.14.1               # Fuzzy matching for preset and tag suggestions
+scikit-learn==1.7.2             # TF-IDF vectorizer and classical ML utilities
