--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ torch==2.2.2                    # Deep learning backend (CPU/CUDA)
 spacy==3.7.5                    # NLP processing for German texts
 rapidfuzz==3.14.1               # Fuzzy matching for preset and tag suggestions
 scikit-learn==1.7.2             # TF-IDF vectorizer and classical ML utilities
+
+# Testing
+pytest==8.3.3                   # Test runner for automated smoke checks
