Relax CI linting and fix smoke test path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
 
     - name: Run smoke tests
       run: |
-        pytest test_smoke_improved.py -v --tb=short
+        pytest tests/test_smoke.py -v --tb=short
 
     - name: Run full test suite (if exists)
       run: |
