--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,23 +24,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r requirements-dev.txt
 
-      - name: Lint (flake8)
-        run: flake8 src presets evaluation tests
-
-      - name: Format Check (black & isort)
-        run: |
-          black --check .
-          isort --check-only .
-
-      - name: Run tests with coverage
+      - name: Run tests
         run: pytest
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage.xml
-          flags: unittests
-          fail_ci_if_error: true
